--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/falkrons/HaH#readme",
   "dependencies": {
     "express": "^4.13.4",
+    "morgan": "^1.7.0",
     "socketio": "^1.0.0"
   }
 }
