--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
   "dependencies": {
     "express": "^4.13.4",
     "morgan": "^1.7.0",
-    "socketio": "^1.0.0"
+    "socket.io": "^1.4.5"
   }
 }
