--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "express": "^4.13.4",
     "morgan": "^1.7.0",
+    "pug": "^2.0.0-alpha6",
     "socket.io": "^1.4.5"
   }
 }
