--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "morgan": "^1.7.0",
     "pug": "^2.0.0-alpha6",
     "socket.io": "^1.4.5"
+  },
+  "devDependencies": {
+    "simple-git": "^1.32.1"
   }
 }
