--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   },
   "homepage": "https://github.com/falkrons/HaH#readme",
   "dependencies": {
+    "body-parser": "^1.15.1",
     "express": "^4.13.4",
     "morgan": "^1.7.0",
     "pug": "^2.0.0-alpha6",
+    "request": "^2.72.0",
     "socket.io": "^1.4.5"
   },
   "devDependencies": {
