--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A game for terrible Altspacers.",
   "main": "server/app.js",
   "scripts": {
+    "start": "node ./server/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
